// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A FieldCheckbox 1`] = `
.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c5 {
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 0.125rem;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c3 input[type='checkbox'] {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c3 .c4 {
  background: #FFFFFF;
  border-color: #DEE1E5;
  color: #FFFFFF;
}

.c3 input[type='checkbox']:focus + .c4 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c3 input[type='checkbox']:disabled + .c4 {
  opacity: 0.5;
}

.c0 {
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 .c6 {
  width: 100%;
}

.c0 .c7 {
  width: 100%;
}

.c0 .c1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding-right: 0.75rem;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="thumbs-up"
  >
    👍
  </label>
  <div
    className=""
  >
    <div
      className="c3 "
    >
      <input
        className=""
        id="thumbs-up"
        name="thumbsUp"
        role="checkbox"
        type="checkbox"
      />
      <div
        className="c4 c5"
      >
        <svg
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 8L7 11L12 4"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`A FieldCheckbox with checked value 1`] = `
.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c5 {
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 0.125rem;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 .c4 {
  background: #FFFFFF;
  border-color: #DEE1E5;
  color: #FFFFFF;
}

.c6 input[type='checkbox']:focus + .c4 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c6 input[type='checkbox']:disabled + .c4 {
  opacity: 0.5;
}

.c3 {
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c3 input[type='checkbox'] {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c3 .c4 {
  background: #6C43E0;
  border-color: #6C43E0;
  color: #FFFFFF;
}

.c3 input[type='checkbox']:focus + .c4 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c3 input[type='checkbox']:disabled + .c4 {
  opacity: 0.5;
}

.c0 {
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 .c7 {
  width: 100%;
}

.c0 .c8 {
  width: 100%;
}

.c0 .c1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding-right: 0.75rem;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="thumbs-up"
  >
    👍
  </label>
  <div
    className=""
  >
    <div
      checked={true}
      className="c3 "
    >
      <input
        className=""
        defaultChecked={true}
        id="thumbs-up"
        name="thumbsUp"
        role="checkbox"
        type="checkbox"
      />
      <div
        className="c4 c5"
      >
        <svg
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 8L7 11L12 4"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`A required FieldCheckbox 1`] = `
.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c6 {
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 0.125rem;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c4 input[type='checkbox'] {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c4 .c5 {
  background: #FFFFFF;
  border-color: #DEE1E5;
  color: #FFFFFF;
}

.c4 input[type='checkbox']:focus + .c5 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c4 input[type='checkbox']:disabled + .c5 {
  opacity: 0.5;
}

.c7 .c5 {
  background: #6C43E0;
  border-color: #6C43E0;
  color: #FFFFFF;
}

.c7 input[type='checkbox']:focus + .c5 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c7 input[type='checkbox']:disabled + .c5 {
  opacity: 0.5;
}

.c3 {
  color: #CC1F36;
}

.c0 {
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 .c8 {
  width: 100%;
}

.c0 .c9 {
  width: 100%;
}

.c0 .c1 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding-right: 0.75rem;
}

<div
  className="c0 "
>
  <label
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
    htmlFor="thumbs-up"
  >
    👍
    <span
      aria-hidden="true"
      className="c3"
    >
       
      *
    </span>
  </label>
  <div
    className=""
  >
    <div
      className="c4 "
    >
      <input
        className=""
        id="thumbs-up"
        name="thumbsUp"
        required={true}
        role="checkbox"
        type="checkbox"
      />
      <div
        className="c5 c6"
      >
        <svg
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 8L7 11L12 4"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
